--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -27,4 +27,18 @@ steps:
 - script: |
     python Data_Class/dataAggApp/DB_Daten.py
   displayName: 'Ausführung des Python-Scripts'
+  condition: 
+
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: '$(Build.SourcesDirectory)'
+    includeRootFolder: false
+    archivetype: 'zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/Application$(Build.BuildId).zip'
+    replaceExistingArchive: true
+    verbose: true # (no value); this input is optional
+    
+- publish: $(Build.ArtifactStagingDirectory)/Application$(Build.BuildId).zip
+  displayName: 'Upload Package'
+  artifact: drop
 
