--- a/Data_Class/dataAggApp/requirements.txt
+++ b/Data_Class/dataAggApp/requirements.txt
@@ -1,4 +1,4 @@
-Flask==2.2.2
+azure-functions
 lark==1.1.5
 lark_parser==0.12.0
 numpy==1.23.3
@@ -7,4 +7,3 @@ pyodbc==4.0.34
 pytz==2022.2.1
 requests==2.28.1
 SQLAlchemy==1.4.43
-streamlit==1.13.0
