--- a/requirements.txt
+++ b/requirements.txt
@@ -1,391 +1,24 @@
-absl-py==1.3.0
 altair==4.2.0
-altgraph==0.17.3
-anyio==3.6.1
-appnope==0.1.3
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asgiref==3.5.2
-asttokens==2.0.8
-astunparse==1.6.3
-attrs==22.1.0
-awesome-streamlit==20200728.1
-Babel==2.10.3
-backcall==0.2.0
-bcrypt==4.0.1
-beautifulsoup4==4.11.1
-bleach==5.0.1
-blinker==1.5
-bqplot==0.12.36
-branca==0.5.0
-cachetools==5.2.0
-certifi==2022.9.14
-cffi==1.15.1
-chardet==5.0.0
-charset-normalizer==2.1.1
-click==8.1.3
-colorclass==2.2.2
-colour==0.1.5
-commonmark==0.9.1
-compressed-rtf==1.0.6
-contourpy==1.0.5
-cramjam==2.6.2
-cryptography==38.0.3
-cycler==0.11.0
-Cython==0.29.32
-debugpy==1.6.3
-decorator==5.1.1
-defusedxml==0.7.1
-distlib==0.3.6
-Django==4.1.3
-docopt==0.6.2
-easygui==0.98.3
-ebcdic==1.1.1
-entrypoints==0.4
-ephem==4.1.3
-et-xmlfile==1.1.0
-executing==1.0.0
-extra-streamlit-components==0.1.56
-extract-msg==0.37.0
-fastjsonschema==2.16.2
-fastparquet==0.8.3
-filelock==3.8.0
+extract_msg==0.37.0
 Flask==2.2.2
-flatbuffers==22.10.26
 folium==0.13.0
-fonttools==4.37.3
-fsspec==2022.11.0
-gast==0.4.0
-gdown==4.5.1
-geojson==2.5.0
-gitdb==4.0.9
-GitPython==3.1.27
-google-auth==2.14.0
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-grpcio==1.50.0
-h5py==3.7.0
-idna==3.4
-IMAPClient==2.3.1
-importlib-metadata==4.12.0
-ipyevents==2.0.1
-ipyfilechooser==0.6.0
-ipykernel==6.16.0
-ipyleaflet==0.17.1
-ipysheet==0.5.0
-ipython==8.5.0
-ipython-genutils==0.2.0
-ipytree==0.2.2
-ipywidgets==7.7.2
-itsdangerous==2.1.2
-jedi==0.18.1
-Jinja2==3.1.2
-joblib==1.2.0
-json5==0.9.10
-jsonschema==4.16.0
-jupyter==1.0.0
-jupyter-console==6.4.4
-jupyter-core==4.11.1
-jupyter-server==1.19.1
-jupyter_client==7.3.5
-jupyterlab==3.4.8
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==1.1.1
-jupyterlab_server==2.15.2
-keras==2.10.0
-Keras-Preprocessing==1.1.2
-keyboard==0.13.5
-kiwisolver==1.4.4
-korean-lunar-calendar==0.3.1
-lark-parser==0.12.0
-leafmap==0.10.5
-libclang==14.0.6
-macholib==1.16.2
-Markdown==3.4.1
-MarkupSafe==2.1.1
+lark==1.1.5
+lark_parser==0.12.0
 matplotlib==3.6.0
-matplotlib-inline==0.1.6
-mistune==2.0.4
-msoffcrypto-tool==5.0.0
-mysql-connector-python==8.0.31
-nbclassic==0.4.5
-nbclient==0.6.8
-nbconvert==7.1.0
-nbformat==5.6.1
-nest-asyncio==1.5.6
-notebook==6.4.12
-notebook-shim==0.1.0
-ntplib==0.4.0
-numpy==1.24.2
-oauthlib==3.2.2
-olefile==0.46
-oletools==0.60.1
-openpyxl==3.0.10
-opt-einsum==3.3.0
-packaging==21.3
+numpy==1.23.3
 pandas==1.5.0
-pandocfilters==1.5.0
 parquet==1.3.1
-parso==0.8.3
-patsy==0.5.2
-pcodedmp==1.2.6
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.2.0
-pipreqs==0.4.11
-platformdirs==2.6.0
-Plost==0.2.5
+Pillow==9.4.0
 plotly==5.10.0
-plotly-express==0.4.1
-ply==3.11
-prettytable==3.4.1
-prometheus-client==0.14.1
-prompt-toolkit==3.0.31
-protobuf==3.19.6
-psutil==5.9.2
-ptyprocess==0.7.0
-pure-eval==0.2.2
+plotly_express==0.4.1
 pyarrow==9.0.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.21
-PyCRS==1.0.2
-pydeck==0.8.0b3
-pyecharts==1.9.1
-pygame==2.1.2
-Pygments==2.13.0
-pyinstaller==5.7.0
-pyinstaller-hooks-contrib==2022.14
-PyJWT==2.6.0
-PyMeeus==0.5.11
-Pympler==1.0.1
-pymssql==2.2.6
-pyobjc==9.0.1
-pyobjc-core==9.0.1
-pyobjc-framework-Accessibility==9.0.1
-pyobjc-framework-Accounts==9.0.1
-pyobjc-framework-AddressBook==9.0.1
-pyobjc-framework-AdServices==9.0.1
-pyobjc-framework-AdSupport==9.0.1
-pyobjc-framework-AppleScriptKit==9.0.1
-pyobjc-framework-AppleScriptObjC==9.0.1
-pyobjc-framework-ApplicationServices==9.0.1
-pyobjc-framework-AppTrackingTransparency==9.0.1
-pyobjc-framework-AudioVideoBridging==9.0.1
-pyobjc-framework-AuthenticationServices==9.0.1
-pyobjc-framework-AutomaticAssessmentConfiguration==9.0.1
-pyobjc-framework-Automator==9.0.1
-pyobjc-framework-AVFoundation==9.0.1
-pyobjc-framework-AVKit==9.0.1
-pyobjc-framework-AVRouting==9.0.1
-pyobjc-framework-BackgroundAssets==9.0.1
-pyobjc-framework-BusinessChat==9.0.1
-pyobjc-framework-CalendarStore==9.0.1
-pyobjc-framework-CallKit==9.0.1
-pyobjc-framework-CFNetwork==9.0.1
-pyobjc-framework-ClassKit==9.0.1
-pyobjc-framework-CloudKit==9.0.1
-pyobjc-framework-Cocoa==9.0.1
-pyobjc-framework-Collaboration==9.0.1
-pyobjc-framework-ColorSync==9.0.1
-pyobjc-framework-Contacts==9.0.1
-pyobjc-framework-ContactsUI==9.0.1
-pyobjc-framework-CoreAudio==9.0.1
-pyobjc-framework-CoreAudioKit==9.0.1
-pyobjc-framework-CoreBluetooth==9.0.1
-pyobjc-framework-CoreData==9.0.1
-pyobjc-framework-CoreHaptics==9.0.1
-pyobjc-framework-CoreLocation==9.0.1
-pyobjc-framework-CoreMedia==9.0.1
-pyobjc-framework-CoreMediaIO==9.0.1
-pyobjc-framework-CoreMIDI==9.0.1
-pyobjc-framework-CoreML==9.0.1
-pyobjc-framework-CoreMotion==9.0.1
-pyobjc-framework-CoreServices==9.0.1
-pyobjc-framework-CoreSpotlight==9.0.1
-pyobjc-framework-CoreText==9.0.1
-pyobjc-framework-CoreWLAN==9.0.1
-pyobjc-framework-CryptoTokenKit==9.0.1
-pyobjc-framework-DataDetection==9.0.1
-pyobjc-framework-DeviceCheck==9.0.1
-pyobjc-framework-DictionaryServices==9.0.1
-pyobjc-framework-DiscRecording==9.0.1
-pyobjc-framework-DiscRecordingUI==9.0.1
-pyobjc-framework-DiskArbitration==9.0.1
-pyobjc-framework-DVDPlayback==9.0.1
-pyobjc-framework-EventKit==9.0.1
-pyobjc-framework-ExceptionHandling==9.0.1
-pyobjc-framework-ExecutionPolicy==9.0.1
-pyobjc-framework-ExtensionKit==9.0.1
-pyobjc-framework-ExternalAccessory==9.0.1
-pyobjc-framework-FileProvider==9.0.1
-pyobjc-framework-FileProviderUI==9.0.1
-pyobjc-framework-FinderSync==9.0.1
-pyobjc-framework-FSEvents==9.0.1
-pyobjc-framework-GameCenter==9.0.1
-pyobjc-framework-GameController==9.0.1
-pyobjc-framework-GameKit==9.0.1
-pyobjc-framework-GameplayKit==9.0.1
-pyobjc-framework-HealthKit==9.0.1
-pyobjc-framework-ImageCaptureCore==9.0.1
-pyobjc-framework-IMServicePlugIn==9.0.1
-pyobjc-framework-InputMethodKit==9.0.1
-pyobjc-framework-InstallerPlugins==9.0.1
-pyobjc-framework-InstantMessage==9.0.1
-pyobjc-framework-Intents==9.0.1
-pyobjc-framework-IntentsUI==9.0.1
-pyobjc-framework-IOSurface==9.0.1
-pyobjc-framework-iTunesLibrary==9.0.1
-pyobjc-framework-KernelManagement==9.0.1
-pyobjc-framework-LatentSemanticMapping==9.0.1
-pyobjc-framework-LaunchServices==9.0.1
-pyobjc-framework-libdispatch==9.0.1
-pyobjc-framework-LinkPresentation==9.0.1
-pyobjc-framework-LocalAuthentication==9.0.1
-pyobjc-framework-LocalAuthenticationEmbeddedUI==9.0.1
-pyobjc-framework-MailKit==9.0.1
-pyobjc-framework-MapKit==9.0.1
-pyobjc-framework-MediaAccessibility==9.0.1
-pyobjc-framework-MediaLibrary==9.0.1
-pyobjc-framework-MediaPlayer==9.0.1
-pyobjc-framework-MediaToolbox==9.0.1
-pyobjc-framework-Metal==9.0.1
-pyobjc-framework-MetalFX==9.0.1
-pyobjc-framework-MetalKit==9.0.1
-pyobjc-framework-MetalPerformanceShaders==9.0.1
-pyobjc-framework-MetalPerformanceShadersGraph==9.0.1
-pyobjc-framework-MetricKit==9.0.1
-pyobjc-framework-MLCompute==9.0.1
-pyobjc-framework-ModelIO==9.0.1
-pyobjc-framework-MultipeerConnectivity==9.0.1
-pyobjc-framework-NaturalLanguage==9.0.1
-pyobjc-framework-NetFS==9.0.1
-pyobjc-framework-Network==9.0.1
-pyobjc-framework-NetworkExtension==9.0.1
-pyobjc-framework-NotificationCenter==9.0.1
-pyobjc-framework-OpenDirectory==9.0.1
-pyobjc-framework-OSAKit==9.0.1
-pyobjc-framework-OSLog==9.0.1
-pyobjc-framework-PassKit==9.0.1
-pyobjc-framework-PencilKit==9.0.1
-pyobjc-framework-Photos==9.0.1
-pyobjc-framework-PhotosUI==9.0.1
-pyobjc-framework-PreferencePanes==9.0.1
-pyobjc-framework-PushKit==9.0.1
-pyobjc-framework-Quartz==9.0.1
-pyobjc-framework-QuickLookThumbnailing==9.0.1
-pyobjc-framework-ReplayKit==9.0.1
-pyobjc-framework-SafariServices==9.0.1
-pyobjc-framework-SafetyKit==9.0.1
-pyobjc-framework-SceneKit==9.0.1
-pyobjc-framework-ScreenCaptureKit==9.0.1
-pyobjc-framework-ScreenSaver==9.0.1
-pyobjc-framework-ScreenTime==9.0.1
-pyobjc-framework-ScriptingBridge==9.0.1
-pyobjc-framework-SearchKit==9.0.1
-pyobjc-framework-Security==9.0.1
-pyobjc-framework-SecurityFoundation==9.0.1
-pyobjc-framework-SecurityInterface==9.0.1
-pyobjc-framework-ServiceManagement==9.0.1
-pyobjc-framework-SharedWithYou==9.0.1
-pyobjc-framework-SharedWithYouCore==9.0.1
-pyobjc-framework-ShazamKit==9.0.1
-pyobjc-framework-Social==9.0.1
-pyobjc-framework-SoundAnalysis==9.0.1
-pyobjc-framework-Speech==9.0.1
-pyobjc-framework-SpriteKit==9.0.1
-pyobjc-framework-StoreKit==9.0.1
-pyobjc-framework-SyncServices==9.0.1
-pyobjc-framework-SystemConfiguration==9.0.1
-pyobjc-framework-SystemExtensions==9.0.1
-pyobjc-framework-ThreadNetwork==9.0.1
-pyobjc-framework-UniformTypeIdentifiers==9.0.1
-pyobjc-framework-UserNotifications==9.0.1
-pyobjc-framework-UserNotificationsUI==9.0.1
-pyobjc-framework-VideoSubscriberAccount==9.0.1
-pyobjc-framework-VideoToolbox==9.0.1
-pyobjc-framework-Virtualization==9.0.1
-pyobjc-framework-Vision==9.0.1
-pyobjc-framework-WebKit==9.0.1
 pyodbc==4.0.34
-pyparsing==2.4.7
-pyrsistent==0.18.1
-pyshp==2.3.1
-PySocks==1.7.1
-pystac==1.6.1
-pystac-client==0.5.1
-python-box==6.0.2
-python-dateutil==2.8.2
-python-decouple==3.6
 pytz==2022.2.1
-pytz-deprecation-shim==0.1.0.post0
-PyYAML==6.0
-pyzmq==24.0.1
-qtconsole==5.3.2
-QtPy==2.2.1
 requests==2.28.1
-requests-oauthlib==1.3.1
-rich==12.5.1
-rsa==4.9
-RTFDE==0.0.2
-scikit-learn==1.1.3
-scipy==1.9.1
-scooby==0.6.0
-seaborn==0.12.1
-semver==2.13.0
-Send2Trash==1.8.0
-setuptools-git==1.2
-simplejson==3.17.6
-six==1.16.0
-smmap==5.0.0
-sniffio==1.3.0
-soupsieve==2.3.2.post1
+scikit_learn==1.2.1
 SQLAlchemy==1.4.43
-sqlparse==0.4.3
-stack-data==0.5.1
-statsmodels==0.13.2
 streamlit==1.13.0
-streamlit-aggrid==0.3.3
-streamlit-authenticator==0.2.1
-streamlit-echarts==0.4.0
-streamlit-option-menu==0.3.2
-streamlit-timeline==0.0.2
-tenacity==8.1.0
-tensorboard==2.10.1
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow-estimator==2.10.0
-tensorflow-macos==2.10.0
-termcolor==2.1.0
-terminado==0.15.0
-threadpoolctl==3.1.0
-thriftpy2==0.4.16
-tinycss2==1.1.1
-toml==0.10.2
-tomli==2.0.1
-toolz==0.12.0
-tornado==6.2
-tqdm==4.64.1
-traitlets==5.4.0
-traittypes==0.2.1
-typing_extensions==4.3.0
-tzdata==2022.2
-tzlocal==4.2
-urllib3==1.26.12
-validators==0.20.0
-virtualenv==20.17.1
-watchdog==2.1.9
-wcwidth==0.2.5
-webencodings==0.5.1
-websocket-client==1.4.1
-Werkzeug==2.2.2
-whitebox==2.1.4
-whiteboxgui==0.7.0
-widgetsnbextension==3.6.1
-wrapt==1.14.1
-xgboost==1.6.2
-xlrd==2.0.1
-xlwt==1.3.0
-xyzservices==2022.9.0
-yarg==0.1.9
-zipp==3.8.1
+streamlit_authenticator==0.2.1
+streamlit_option_menu==0.3.2
+tensorflow==2.11.0
+tensorflow_macos==2.10.0
