--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,6 @@ SQLAlchemy==1.4.43
 streamlit==1.13.0
 streamlit_authenticator==0.2.1
 streamlit_option_menu==0.3.2
+watchdog==2.1.9
+openpyxl==3.0.10
+streamlit-aggrid==0.3.3
