--- a/Data_Class/dataAggApp/requirements.txt
+++ b/Data_Class/dataAggApp/requirements.txt
@@ -1,11 +1,25 @@
+altair==4.2.0
+extract_msg==0.37.0
 Flask==2.2.2
+folium==0.13.0
 lark==1.1.5
 lark_parser==0.12.0
+matplotlib==3.6.0
 numpy==1.23.3
 pandas==1.5.0
+parquet==1.3.1
+Pillow==9.4.0
+plotly==5.10.0
+plotly_express==0.4.1
 pyarrow==9.0.0
 pyodbc==4.0.34
 pytz==2022.2.1
 requests==2.28.1
+scikit_learn==1.2.1
 SQLAlchemy==1.4.43
 streamlit==1.13.0
+streamlit_authenticator==0.2.1
+streamlit_option_menu==0.3.2
+watchdog==2.1.9
+openpyxl==3.0.10
+streamlit-aggrid==0.3.3
