--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,8 +20,11 @@ steps:
   displayName: 'Use Python $(python.version)'
 
 - script: |
+    python -m venv antenv
+    source antenv/bin/activate
     python -m pip install --upgrade pip
-    pip install -r requirements.txt
+    pip install --target="./.python_packages/lib/site-packages" -r ./requirements.txt
+  workingDirectory: $(projectRoot)
   displayName: 'Install dependencies'
 
 - task: ArchiveFiles@2
