--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ steps:
     python -m venv antenv
     source antenv/bin/activate
     python -m pip install --upgrade pip
-    pip install --target="./.python_packages/lib/site-packages" -r ./requirements.txt
+    pip install --target="./antenv/lib/python3.10/site-packages" -r ./requirements.txt
   displayName: 'Install dependencies'
 
 - task: ArchiveFiles@2
