--- a/requirements.txt
+++ b/requirements.txt
@@ -17,5 +17,5 @@ requests==2.28.1
 SQLAlchemy==1.4.43
 streamlit==1.13.0
 streamlit_authenticator==0.2.1
+streamlit_autorefresh==0.0.1
 streamlit_option_menu==0.3.2
-streamlit-aggrid==0.3.3
