--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "python.autoComplete.extraPaths": [
     
     ],
-    "python.defaultInterpreterPath": "/Applications/Python 3.11"
+    "python.defaultInterpreterPath": "/Applications/Python 3.11",
+    "python.analysis.typeCheckingMode": "basic"
 }
