--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,123 @@
-extract_msg==0.37.0
+altair==4.2.2
+appnope==0.1.3
+asttokens==2.2.1
+attrs==22.2.0
+backcall==0.2.0
+bcrypt==4.0.1
+beautifulsoup4==4.12.2
+blinker==1.6.1
+branca==0.6.0
+cachetools==5.3.0
+certifi==2022.12.7
+cffi==1.15.1
+chardet==5.1.0
+charset-normalizer==2.1.1
+click==8.1.3
+colorclass==2.2.2
+comm==0.1.3
+compressed-rtf==1.0.6
+contourpy==1.0.7
+cryptography==40.0.1
+cycler==0.11.0
+debugpy==1.6.7
+decorator==5.1.1
+easygui==0.98.3
+ebcdic==1.1.1
+entrypoints==0.4
+et-xmlfile==1.1.0
+executing==1.2.0
+extra-streamlit-components==0.1.56
+extract-msg==0.37.0
 Flask==2.2.2
 folium==0.13.0
+fonttools==4.39.3
+gitdb==4.0.10
+GitPython==3.1.31
+idna==3.4
+IMAPClient==2.3.1
+importlib-metadata==6.3.0
+ipykernel==6.22.0
+ipython==8.13.2
+itsdangerous==2.1.2
+jedi==0.18.2
+Jinja2==3.1.2
+jsonschema==4.17.3
+jupyter_client==8.2.0
+jupyter_core==5.3.0
+kiwisolver==1.4.4
 lark==1.1.5
-lark_parser==0.12.0
+lark-parser==0.12.0
+markdown-it-py==2.2.0
+MarkupSafe==2.1.2
 matplotlib==3.6.0
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+msoffcrypto-tool==5.0.1
+nest-asyncio==1.5.6
 numpy==1.23.3
+olefile==0.46
+oletools==0.60.1
+openpyxl==3.1.2
+packaging==23.1
 pandas==1.5.0
 parquet==1.3.1
+parso==0.8.3
+patsy==0.5.3
+pcodedmp==1.2.6
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==9.4.0
+platformdirs==3.5.0
 plotly==5.10.0
-plotly_express==0.4.1
+plotly-express==0.4.1
+ply==3.11
+prompt-toolkit==3.0.38
+protobuf==3.20.3
+psutil==5.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pyarrow==9.0.0
+pycparser==2.21
+pydeck==0.8.0
+Pygments==2.15.0
+PyJWT==2.6.0
+Pympler==1.0.1
 pyodbc==4.0.38
+pyparsing==2.4.7
+pyrsistent==0.19.3
+python-dateutil==2.8.2
+python-decouple==3.8
 pytz==2022.2.1
+pytz-deprecation-shim==0.1.0.post0
+PyYAML==6.0
+pyzmq==25.0.2
 requests==2.28.1
+rich==13.3.4
+RTFDE==0.0.2
+scipy==1.10.1
+semver==3.0.0
+six==1.16.0
+smmap==5.0.0
+soupsieve==2.4
 SQLAlchemy==1.4.43
+stack-data==0.6.2
+statsmodels==0.13.5
 streamlit==1.19.0
-streamlit_authenticator==0.2.1
-streamlit_autorefresh==0.0.1
-streamlit_option_menu==0.3.2
 streamlit-aggrid==0.3.3
-openpyxl 
+streamlit-authenticator==0.2.1
+streamlit-autorefresh==0.0.1
+streamlit-option-menu==0.3.2
+tenacity==8.2.2
+thriftpy2==0.4.16
+toml==0.10.2
+toolz==0.12.0
+tornado==6.2
+traitlets==5.9.0
+typing_extensions==4.5.0
+tzdata==2023.3
+tzlocal==4.3
+urllib3==1.26.15
+validators==0.20.0
+wcwidth==0.2.6
+Werkzeug==2.2.3
+zipp==3.15.0
