--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,6 +2,7 @@
 base="light"
 primaryColor="#0e2b63"
 secondaryBackgroundColor="#f7f9f9"
-
+textColor="#262730"
+font="Montserrat"
 [server]
 port = 8000
