--- a/requirements.txt
+++ b/requirements.txt
@@ -89,6 +89,7 @@ smmap==5.0.1
 soupsieve==2.5
 SQLAlchemy==2.0.19
 st-annotated-text==4.0.0
+st-theme==1.2.2
 stack-data==0.6.3
 statsmodels==0.14.1
 streamlit==1.33.0
@@ -96,6 +97,7 @@ streamlit-aggrid==1.0.1
 streamlit-authenticator==0.3.2
 streamlit-autorefresh==1.0.1
 streamlit-elements==0.1.0
+streamlit-navigation-bar==3.1.1
 streamlit-on-Hover-tabs==1.0.1
 streamlit-timeline==0.0.2
 tenacity==8.2.3
