--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
 # requirements.txt
 
 altair==4.2.2
+annotated-types==0.6.0
+appdirs==1.4.4
 appnope==0.1.4
+arrow==1.3.0
+astor==0.8.1
 asttokens==2.4.1
 attrs==23.2.0
+backoff==2.2.1
 bcrypt==4.1.2
 beautifulsoup4==4.12.3
 blinker==1.7.0
@@ -16,8 +21,10 @@ click==8.1.7
 comm==0.2.2
 contourpy==1.2.1
 cycler==0.12.1
+dateutils==0.6.12
 debugpy==1.8.1
 decorator==5.1.1
+duckdb==0.10.1
 entrypoints==0.4
 et-xmlfile==1.1.0
 executing==2.0.1
@@ -26,6 +33,7 @@ fastjsonschema==2.19.1
 fonttools==4.50.0
 gitdb==4.0.11
 GitPython==3.1.43
+gw_dsl_parser==0.1.47
 htbuilder==0.6.2
 hydralit_components==1.0.10
 idna==3.6
@@ -33,6 +41,7 @@ importlib_metadata==7.1.0
 install==1.3.5
 ipykernel==6.29.4
 ipython==8.23.0
+ipywidgets==8.1.2
 jedi==0.19.1
 Jinja2==3.1.3
 joblib==1.3.2
@@ -40,6 +49,8 @@ jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
 jupyter_client==8.6.1
 jupyter_core==5.7.2
+jupyterlab_widgets==3.0.10
+kanaries_track==0.0.4
 kiwisolver==1.4.5
 lxml==5.2.1
 markdown-it-py==3.0.0
@@ -47,6 +58,7 @@ MarkupSafe==2.1.5
 matplotlib==3.8.4
 matplotlib-inline==0.1.6
 mdurl==0.1.2
+monotonic==1.6
 more-itertools==10.2.0
 nbformat==5.10.3
 nest-asyncio==1.6.0
@@ -67,8 +79,11 @@ psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pyarrow==15.0.2
+pydantic==2.7.0
+pydantic_core==2.18.1
 pydeck==0.8.1b0
 Pygments==2.17.2
+pygwalker==0.4.8
 PyJWT==2.8.0
 pyodbc==5.0.1
 pyparsing==3.0.9
@@ -84,10 +99,12 @@ rpds-py==0.17.1
 scikit-learn==1.4.1.post1
 scipy==1.12.0
 seaborn==0.13.2
+segment-analytics-python==2.2.3
 six==1.16.0
 smmap==5.0.1
 soupsieve==2.5
 SQLAlchemy==2.0.19
+sqlglot==23.10.0
 st-annotated-text==4.0.0
 st-theme==1.2.2
 stack-data==0.6.3
@@ -106,11 +123,14 @@ toml==0.10.2
 toolz==0.12.1
 tornado==6.4
 traitlets==5.14.2
+types-python-dateutil==2.9.0.20240316
 typing_extensions==4.9.0
 tzdata==2023.4
 tzlocal==5.2
 urllib3==2.2.0
 validators==0.22.0
+wasmtime==12.0.0
 wcwidth==0.2.13
+widgetsnbextension==4.0.10
 xyzservices==2024.4.0
 zipp==3.18.1
