--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ cycler==0.12.1
 dateutils==0.6.12
 decorator==5.1.1
 duckdb==0.10.1
+et-xmlfile==1.1.0
 executing==2.0.1
 extra-streamlit-components==0.1.71
 fonttools==4.51.0
@@ -45,6 +46,7 @@ mdurl==0.1.2
 monotonic==1.6
 more-itertools==10.2.0
 numpy==1.26.4
+openpyxl==3.1.2
 packaging==24.0
 pandas==2.2.2
 parso==0.8.4
@@ -101,4 +103,3 @@ urllib3==2.2.1
 wasmtime==12.0.0
 wcwidth==0.2.13
 widgetsnbextension==4.0.10
-openpyxl
