--- a/requirements.txt
+++ b/requirements.txt
@@ -87,7 +87,7 @@ st-annotated-text==4.0.1
 st-theme==1.2.2
 stack-data==0.6.3
 statsmodels==0.14.2
-streamlit==1.33.0
+streamlit
 streamlit-authenticator==0.3.2
 streamlit-autorefresh==1.0.1
 streamlit-navigation-bar==3.1.2
