--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,17 @@
 altair==5.3.0
 annotated-types==0.6.0
 appdirs==1.4.4
+appnope==0.1.4
 arrow==1.3.0
 astor==0.8.1
 asttokens==2.4.1
 attrs==23.2.0
 backoff==2.2.1
 bcrypt==4.1.2
+beautifulsoup4==4.12.3
 blinker==1.7.0
+bokeh==2.4.3
+bs4==0.0.2
 cachetools==5.3.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
@@ -18,6 +22,7 @@ comm==0.2.2
 contourpy==1.2.1
 cycler==0.12.1
 dateutils==0.6.12
+debugpy==1.8.1
 decorator==5.1.1
 duckdb==0.10.1
 et-xmlfile==1.1.0
@@ -28,24 +33,29 @@ gitdb==4.0.11
 GitPython==3.1.43
 gw_dsl_parser==0.1.47
 htbuilder==0.6.2
+hydralit_components==1.0.10
 idna==3.7
+ipykernel==6.29.4
 ipython==8.23.0
 ipywidgets==8.1.2
 jedi==0.19.1
 Jinja2==3.1.3
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
+jupyter_client==8.6.1
+jupyter_core==5.7.2
 jupyterlab_widgets==3.0.10
 kanaries_track==0.0.4
 kiwisolver==1.4.5
+lxml==5.2.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.8.4
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 monotonic==1.6
-hydralit_components
 more-itertools==10.2.0
+nest-asyncio==1.6.0
 numpy==1.26.4
 openpyxl==3.1.2
 packaging==24.0
@@ -54,6 +64,7 @@ parso==0.8.4
 patsy==0.5.6
 pexpect==4.9.0
 pillow==10.3.0
+platformdirs==4.2.1
 plotly==5.21.0
 plotly-express==0.4.1
 prompt-toolkit==3.0.43
@@ -73,24 +84,27 @@ pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.1
+pyzmq==26.0.3
 referencing==0.34.0
 requests==2.31.0
 rich==13.7.1
 rpds-py==0.18.0
 scipy==1.13.0
+seaborn==0.13.2
 segment-analytics-python==2.2.3
 six==1.16.0
 smmap==5.0.1
+soupsieve==2.5
 SQLAlchemy==2.0.29
 sqlglot==23.11.2
 st-annotated-text==4.0.1
-st-theme==1.2.2
+st-theme==1.2.3
 stack-data==0.6.3
 statsmodels==0.14.2
-streamlit
+streamlit==1.34.0
 streamlit-authenticator==0.3.2
 streamlit-autorefresh==1.0.1
-streamlit-navigation-bar==3.1.2
+streamlit-navigation-bar==3.2.0
 streamlit-timeline==0.0.2
 tenacity==8.2.3
 toml==0.10.2
@@ -102,6 +116,7 @@ typing_extensions==4.11.0
 tzdata==2024.1
 urllib3==2.2.1
 wasmtime==12.0.0
+watchdog==4.0.0
 wcwidth==0.2.13
 widgetsnbextension==4.0.10
-watchdog
+xyzservices==2024.4.0
