--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 # requirements.txt
 
+pandas
 altair==5.3.0
 annotated-types==0.6.0
 appdirs==1.4.4
@@ -57,10 +58,9 @@ monotonic==1.6
 more-itertools==10.2.0
 nbformat==5.10.4
 nest-asyncio==1.6.0
-numpy==1.26.4
+numpy
 openpyxl==3.1.2
 packaging==23.2
-pandas==2.2.2
 parso==0.8.4
 patsy==0.5.6
 pexpect==4.9.0
