--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,11 +18,13 @@ steps:
   inputs:
     versionSpec: '$(python.version)'
   displayName: 'Use Python $(python.version)'
-
 - script: |
     python -m venv antenv
     source antenv/bin/activate
     python -m pip install --upgrade pip
+    python -m pip install --upgrade pip
+    pip install wheel
+    pip install prophet
     pip install --target="./antenv/lib/python3.10/site-packages" -r ./requirements.txt
   displayName: 'Install dependencies'
 
