--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,9 +1,13 @@
+# Python package
+# Create and test a Python package on multiple Python versions.
+# Add steps that analyze code, save the dist with the build record, publish to a PyPI-compatible index, and more:
+# https://docs.microsoft.com/azure/devops/pipelines/languages/python
+
 trigger:
 - master
 
 pool:
   vmImage: ubuntu-latest
-
 strategy:
   matrix:
     Python310:
@@ -26,21 +30,16 @@ steps:
   inputs:
     rootFolderOrFile: '$(Build.SourcesDirectory)'
     includeRootFolder: false
-    archiveType: 'zip'
+    archivetype: 'zip'
     archiveFile: '$(Build.ArtifactStagingDirectory)/Application$(Build.BuildId).zip'
     replaceExistingArchive: true
-    verbose: true
-    includePatterns: '**'
-    excludePatterns: |
-      **/__pycache__/**
-      **/*.pyc
-      **/.DS_Store
-
+    verbose: true # (no value); this input is optional
+    
 - publish: $(Build.ArtifactStagingDirectory)/Application$(Build.BuildId).zip
   displayName: 'Upload Package'
   artifact: drop
 
-# Clean Deployment auf Azure Web App
+  # Clean Deployment auf Azure Web App
 - task: AzureWebApp@1
   displayName: 'Deploy to Azure Web App (Clean)'
   inputs:
