--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,13 +1,9 @@
-# Python package
-# Create and test a Python package on multiple Python versions.
-# Add steps that analyze code, save the dist with the build record, publish to a PyPI-compatible index, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/python
-
 trigger:
 - master
 
 pool:
   vmImage: ubuntu-latest
+
 strategy:
   matrix:
     Python310:
@@ -22,19 +18,24 @@ steps:
 - script: |
     python -m venv antenv
     source antenv/bin/activate
-    python -m pip install --upgrade pip
-    pip install --target="./antenv/lib/python3.10/site-packages" -r ./requirements.txt
+    python -m pip install --upgrade pip setuptools wheel
+    pip install -r requirements.txt
   displayName: 'Install dependencies'
+
+- script: |
+    source antenv/bin/activate
+    streamlit run your_app.py --server.headless true --server.port 8501 &
+    sleep 10
+  displayName: 'Run Streamlit (Test)'
 
 - task: ArchiveFiles@2
   inputs:
     rootFolderOrFile: '$(Build.SourcesDirectory)'
     includeRootFolder: false
-    archivetype: 'zip'
+    archiveType: 'zip'
     archiveFile: '$(Build.ArtifactStagingDirectory)/Application$(Build.BuildId).zip'
     replaceExistingArchive: true
-    verbose: true # (no value); this input is optional
-    
+
 - publish: $(Build.ArtifactStagingDirectory)/Application$(Build.BuildId).zip
   displayName: 'Upload Package'
   artifact: drop
