--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorclass==2.2.2
 comm==0.2.2
-compressed_rtf==1.0.6
+#compressed_rtf==1.0.6
 contourpy==1.2.1
 cryptography==42.0.7
 cssselect2==0.7.0
