--- a/requirements.txt
+++ b/requirements.txt
@@ -37,7 +37,7 @@ et-xmlfile==1.1.0
 exceptiongroup==1.2.1
 executing==2.0.1
 extra-streamlit-components==0.1.71
-extract-msg==0.48.5
+#extract-msg==0.48.5
 fastjsonschema==2.19.1
 fonttools==4.51.0
 gitdb==4.0.11
