--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,6 +32,11 @@ steps:
     pip install --target="./antenv/lib/python3.10/site-packages" -r ./requirements.txt
   displayName: 'Install dependencies'
 
+- script: |
+    find . -name "*.pyc" -delete
+    echo "Deleted all .pyc files before archiving"
+  displayName: 'Final cleanup'
+
 - task: ArchiveFiles@2
   inputs:
     rootFolderOrFile: '$(Build.SourcesDirectory)'
