--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,31 +4,16 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
-strategy:
-  matrix:
-    Python310:
-      python.version: '3.10'
-
 steps:
 - task: UsePythonVersion@0
   inputs:
-    versionSpec: '$(python.version)'
-  displayName: 'Use Python $(python.version)'
+    versionSpec: '3.10'
+  displayName: 'Use Python 3.10'
 
 - script: |
-    echo "Force clean checkout"
+    echo "Clean build environment"
     git clean -fdx
   displayName: 'Clean repository'
-
-- script: |
-    python -m pip install --upgrade pip
-    pip install -r requirements.txt
-  displayName: 'Install dependencies'
-
-- script: |
-    find . -name "*.pyc" -delete
-    echo "Deleted all .pyc files before archiving"
-  displayName: 'Final cleanup'
 
 - task: ArchiveFiles@2
   inputs:
@@ -37,15 +22,15 @@ steps:
     archiveType: 'zip'
     archiveFile: '$(Build.ArtifactStagingDirectory)/Application$(Build.BuildId).zip'
     replaceExistingArchive: true
-    verbose: true
     excludePatterns: |
-      **/*.pyc
       **/__pycache__/**
-      **/.git/**
-      **/.vscode/**
-      **/.DS_Store
-      antenv/**
+      **/*.pyc
       .venv/**
+      antenv/**
+      **/.git/**
+      **/.DS_Store
+      **/.vscode/**
+  displayName: 'Archive app files'
 
 - publish: $(Build.ArtifactStagingDirectory)/Application$(Build.BuildId).zip
   displayName: 'Upload Package'
