--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,59 +1,40 @@
+# Python package
+# Create and test a Python package on multiple Python versions.
+# Add steps that analyze code, save the dist with the build record, publish to a PyPI-compatible index, and more:
+# https://docs.microsoft.com/azure/devops/pipelines/languages/python
+
 trigger:
 - master
 
 pool:
   vmImage: ubuntu-latest
+strategy:
+  matrix:
+    Python310:
+      python.version: '3.10'
 
 steps:
 - task: UsePythonVersion@0
   inputs:
-    versionSpec: '3.10'
-  displayName: 'Use Python 3.10'
+    versionSpec: '$(python.version)'
+  displayName: 'Use Python $(python.version)'
 
 - script: |
-    echo "Force full cleanup of working directory"
-    sudo rm -rf antenv
-    sudo rm -rf .venv
-    git clean -xfd
-  displayName: 'Clean repository completely'
-
-
-
-
-
+    python -m venv antenv
+    source antenv/bin/activate
+    python -m pip install --upgrade pip
+    pip install --target="./antenv/lib/python3.10/site-packages" -r ./requirements.txt
+  displayName: 'Install dependencies'
 
 - task: ArchiveFiles@2
   inputs:
     rootFolderOrFile: '$(Build.SourcesDirectory)'
     includeRootFolder: false
-    archiveType: 'zip'
+    archivetype: 'zip'
     archiveFile: '$(Build.ArtifactStagingDirectory)/Application$(Build.BuildId).zip'
     replaceExistingArchive: true
-    verbose: true
-    excludePatterns: |
-      **/__pycache__/**
-      **/*.pyc
-      **/.git/**
-      **/.DS_Store
-      **/.vscode/**
-      **/antenv/**
-      **/antenv*
-      **/numpy.libs/**
-      **/*.so
-  displayName: 'Archive app files'
-
-
+    verbose: true # (no value); this input is optional
+    
 - publish: $(Build.ArtifactStagingDirectory)/Application$(Build.BuildId).zip
   displayName: 'Upload Package'
   artifact: drop
-
-- task: AzureWebApp@1
-  inputs:
-    azureSubscription: 'WA-PP-NE-CMES-REPORTING-SUPERDEPOTUI-prod'
-    appName: 'WA-PP-NE-CMES-REPORTING-SUPERDEPOTUI-prod'
-    package: '$(Build.ArtifactStagingDirectory)/Application$(Build.BuildId).zip'
-    runtimeStack: 'PYTHON|3.10'
-    startUpCommand: 'streamlit run Main.py --server.port=8000 --server.enableCORS=false'
-    deploymentMethod: 'runFromPackage'  # <-- zwingt echtes Run From Package
-    takeAppOfflineFlag: true
-  displayName: 'Deploy Streamlit App to Azure'
