--- a/requirements.txt
+++ b/requirements.txt
@@ -1,156 +1,42 @@
-# requirements.txt
-
-altair==4.2.2
-annotated-types==0.6.0
-appdirs==1.4.4
-appnope==0.1.4
-arrow==1.3.0
-astor==0.8.1
-asttokens==2.4.1
-attrs==23.2.0
-backoff==2.2.1
-bcrypt==4.1.3
-beautifulsoup4==4.12.3
-blinker==1.8.2
-Brotli==1.1.0
-bs4==0.0.2
-cachetools==5.3.3
-certifi==2024.2.2
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
-colorclass==2.2.2
-comm==0.2.2
-contourpy==1.2.1
-cryptography==42.0.7
-cssselect2==0.7.0
-cycler==0.12.1
-dateutils==0.6.12
-debugpy==1.8.1
-decorator==5.1.1
-duckdb==0.10.2
-easygui==0.98.3
-ebcdic==1.1.1
-entrypoints==0.4
-et-xmlfile==1.1.0
-exceptiongroup==1.2.1
-executing==2.0.1
-extra-streamlit-components==0.1.71
-fastjsonschema==2.19.1
-fonttools==4.51.0
-gitdb==4.0.11
-GitPython==3.1.43
-gw_dsl_parser==0.1.48a5
-htbuilder==0.6.2
-html5lib==1.1
-hydralit_components==1.0.10
-idna==3.7
-ipykernel==6.29.4
-ipython==8.24.0
-ipyvizzu==0.17.0
-ipywidgets==8.1.2
-jedi==0.19.1
-Jinja2==3.1.4
-jsonschema==4.22.0
-jsonschema-specifications==2023.12.1
-jupyter_client==8.6.1
-jupyter_core==5.7.2
-jupyterlab_widgets==3.0.10
-kanaries_track==0.0.5
-kiwisolver==1.4.5
-lark==1.1.8
-lxml==5.2.2
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.9.0
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-monotonic==1.6
-more-itertools==10.2.0
-msg-parser==1.2.0
-msoffcrypto-tool==5.4.1
-nbformat==5.10.4
-nest-asyncio==1.6.0
-numpy==1.26.4
-olefile==0.47
-oletools==0.60.1
-openpyxl==3.1.2
-packaging==23.2
+# data manipulation
 pandas==2.2.2
-parso==0.8.4
-patsy==0.5.6
-pcodedmp==1.2.6
-pdfkit==1.0.0
-pexpect==4.9.0
-pillow==10.3.0
-platformdirs==4.2.2
+numpy==1.26.4
+openpyxl==3.1.2 # dependency for pandas.read_excel
+
+# plotting
 plotly==5.22.0
-plotly-express==0.4.1
-prompt-toolkit==3.0.43
-protobuf==4.25.3
-psutil==5.9.8
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyarrow==16.1.0
-pycparser==2.22
-pydantic==2.7.1
-pydantic_core==2.18.2
-pydeck==0.9.1
-pydyf==0.10.0
-Pygments==2.18.0
-pygwalker==0.4.8.5
-PyJWT==2.8.0
-pyodbc==5.1.0
-pyparsing==2.4.7
-pyphen==0.15.0
-python-dateutil==2.9.0.post0
-python-decouple==3.8
-pytz==2024.1
-PyYAML==6.0.1
-pyzmq==26.0.3
-red-black-tree-mod==1.20
-referencing==0.35.1
-requests==2.31.0
-rich==13.7.1
-rpds-py==0.18.1
-RTFDE==0.1.1
-scipy==1.13.0
-segment-analytics-python==2.2.3
-six==1.16.0
-smmap==5.0.1
-soupsieve==2.5
-SQLAlchemy==2.0.30
-sqlglot==23.15.9
-st-annotated-text==4.0.1
-st-theme==1.2.3
-stack-data==0.6.3
-statsmodels==0.14.2
+matplotlib==3.9.0
+pillow==10.3.0
+
+# web app
 streamlit==1.37.1
 streamlit-aggrid==1.0.5
 streamlit-authenticator==0.3.2
 streamlit-autorefresh==1.0.1
 streamlit-navigation-bar==3.2.0
 streamlit-timeline==0.0.2
-streamlit-vis-timeline==0.3.0
-streamlit-vizzu==0.1.5
-tenacity==8.3.0
-tinycss2==1.3.0
-toml==0.10.2
-toolz==0.12.1
-tornado==6.4
-traitlets==5.14.3
-types-python-dateutil==2.9.0.20240316
-typing_extensions==4.11.0
-tzdata==2024.1
-tzlocal==5.2
-urllib3==2.2.1
-wasmtime==12.0.0
-watchdog==4.0.0
-wcwidth==0.2.13
-weasyprint==62.1
-webencodings==0.5.1
-widgetsnbextension==4.0.10
-zopfli==0.2.3
-holidays
-chardet
+hydralit_components==1.0.10
+st-annotated-text==4.0.1
+
+# time series and stats
+statsmodels==0.14.2
 prophet==1.1.5
+holidays
+pytz==2024.1
+
+# database
+SQLAlchemy==2.0.30
+pyodbc==5.1.0
+pyspark
+delta-spark
+deltalake
+
+# utils
+bcrypt==4.1.3
+chardet
+requests==2.31.0
+pdfkit==1.0.0
+msg-parser==1.2.0
+PyMuPDF
+patsy==0.5.6 # dependency for statsmodels
+scipy==1.13.0 # dependency for statsmodels
