--- a/requirements.txt
+++ b/requirements.txt
@@ -35,8 +35,6 @@ deltalake
 bcrypt==4.1.3
 chardet
 requests==2.31.0
-pdfkit==1.0.0
-msg-parser==1.2.0
-PyMuPDF
 patsy==0.5.6 # dependency for statsmodels
 scipy==1.13.0 # dependency for statsmodels
+fsspec
