--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,6 @@ streamlit==1.37.1
 streamlit-aggrid==1.0.5
 streamlit-authenticator==0.3.2
 streamlit-autorefresh==1.0.1
-streamlit-navigation-bar==3.2.0
 streamlit-timeline==0.0.2
 hydralit_components==1.0.10
 st-annotated-text==4.0.1
@@ -27,7 +26,7 @@ pytz==2024.1
 # database
 SQLAlchemy==2.0.30
 pyodbc==5.1.0
-pyspark
+#pyspark
 delta-spark
 deltalake
 
