--- a/requirements.txt
+++ b/requirements.txt
@@ -7,15 +7,15 @@ openpyxl==3.1.2 # dependency for pandas.read_excel
 plotly==5.22.0
 matplotlib==3.9.0
 pillow==10.3.0
+plotly_express==0.4.1
 
 # web app
-streamlit==1.37.1
+streamlit==1.53.0
 streamlit-aggrid==1.0.5
 streamlit-authenticator==0.3.2
 streamlit-autorefresh==1.0.1
 streamlit-timeline==0.0.2
 hydralit_components==1.0.10
-st-annotated-text==4.0.1
 
 # time series and stats
 statsmodels==0.14.2
@@ -26,7 +26,6 @@ pytz==2024.1
 # database
 SQLAlchemy==2.0.30
 pyodbc==5.1.0
-#pyspark
 delta-spark
 deltalake
 
@@ -37,3 +36,4 @@ requests==2.31.0
 patsy==0.5.6 # dependency for statsmodels
 scipy==1.13.0 # dependency for statsmodels
 fsspec
+watchdog
