--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,40 +1,37 @@
-# Python package
-# Create and test a Python package on multiple Python versions.
-# Add steps that analyze code, save the dist with the build record, publish to a PyPI-compatible index, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/python
-
 trigger:
 - master
 
 pool:
   vmImage: ubuntu-latest
-strategy:
-  matrix:
-    Python312:
-      python.version: '3.12'
+
+variables:
+  python.version: '3.12'
 
 steps:
 - task: UsePythonVersion@0
   inputs:
     versionSpec: '$(python.version)'
-  displayName: 'Use Python $(python.version)'
+  displayName: 'Benutze Python $(python.version)'
 
 - script: |
-    python -m venv antenv
-    source antenv/bin/activate
     python -m pip install --upgrade pip
-    pip install --target="./antenv/lib/python3.10/site-packages" -r ./requirements.txt
-  displayName: 'Install dependencies'
+    # Wir installieren die Abhängigkeiten lokal in den Workspace, 
+    # damit sie mit archiviert werden
+    pip install -r requirements.txt
+  displayName: 'Installiere Abhängigkeiten'
 
 - task: ArchiveFiles@2
+  displayName: 'Anwendung paketieren'
   inputs:
     rootFolderOrFile: '$(Build.SourcesDirectory)'
     includeRootFolder: false
-    archivetype: 'zip'
-    archiveFile: '$(Build.ArtifactStagingDirectory)/Application$(Build.BuildId).zip'
+    archiveType: 'zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
     replaceExistingArchive: true
-    verbose: true # (no value); this input is optional
-    
-- publish: $(Build.ArtifactStagingDirectory)/Application$(Build.BuildId).zip
-  displayName: 'Upload Package'
-  artifact: drop
+
+- task: PublishBuildArtifacts@1
+  displayName: 'Artefakt veröffentlichen'
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
