--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,32 +6,50 @@ pool:
 
 variables:
   python.version: '3.12'
+  # Hier den Namen deiner Web App eintragen:
+  webAppName: 'WA-PD-NE-CMES-REPORTING-SUPERDEPOTUI-dev'
+  azureServiceConnection: 'DEIN_SERVICE_CONNECTION_NAME'
 
-steps:
-- task: UsePythonVersion@0
-  inputs:
-    versionSpec: '$(python.version)'
-  displayName: 'Benutze Python $(python.version)'
+stages:
+- stage: Build
+  jobs:
+  - job: BuildJob
+    steps:
+    - task: UsePythonVersion@0
+      inputs:
+        versionSpec: '$(python.version)'
+      displayName: 'Python $(python.version) vorbereiten'
 
-- script: |
-    python -m pip install --upgrade pip
-    # Wir installieren die Abhängigkeiten lokal in den Workspace, 
-    # damit sie mit archiviert werden
-    pip install -r requirements.txt
-  displayName: 'Installiere Abhängigkeiten'
+    - script: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+      displayName: 'Dependencies installieren'
 
-- task: ArchiveFiles@2
-  displayName: 'Anwendung paketieren'
-  inputs:
-    rootFolderOrFile: '$(Build.SourcesDirectory)'
-    includeRootFolder: false
-    archiveType: 'zip'
-    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
-    replaceExistingArchive: true
+    - task: ArchiveFiles@2
+      inputs:
+        rootFolderOrFile: '$(Build.SourcesDirectory)'
+        includeRootFolder: false
+        archiveType: 'zip'
+        archiveFile: '$(Build.ArtifactStagingDirectory)/app.zip'
 
-- task: PublishBuildArtifacts@1
-  displayName: 'Artefakt veröffentlichen'
-  inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
-    ArtifactName: 'drop'
-    publishLocation: 'Container'
+    - publish: $(Build.ArtifactStagingDirectory)/app.zip
+      artifact: drop
+
+- stage: Deploy
+  dependsOn: Build
+  condition: succeeded()
+  jobs:
+  - deployment: DeployJob
+    environment: 'development'
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - task: AzureWebApp@1
+            inputs:
+              azureSubscription: '$(azureServiceConnection)'
+              appType: 'webAppLinux'
+              appName: '$(webAppName)'
+              package: '$(Pipeline.Workspace)/drop/app.zip'
+              runtimeStack: 'PYTHON|$(python.version)'
+              startUpCommand: 'python -m streamlit run Main.py --server.port 8000 --server.enableCORS false'
